# lang-graph-agent

./: .gitignore  Dockerfile  README.md  docker-compose.yml  langgraph.json  main.py  pyproject.toml  requirements.txt
app/: main.py
notebook/: 01-notebook.ipynb  02-simple.ipynb  03-messages.ipynb  04-llm.ipynb  05-rag.ipynb  06-chaining.ipynb  07-structured-output.ipynb  09-prompting.ipynb
notes/: notes1.md
src/agents/: main.py  rag.py  simple.py
src/agents/support/: agent.py  state.py
src/agents/support/nodes/conversation/: node.py  prompt.py  tools.py
src/agents/support/nodes/extractor/: node.py  prompt.py
src/platzi_lang_graph.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
