[project]
name = "platzi-lang-graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.0.7",
    "langchain-core>=1.0.5",
    "langchain-google-genai>=3.0.3",
    "langchain-google-vertexai>=3.0.3",
    "langchain-openai>=1.0.3",
    "langgraph>=1.0.3",
]

[dependency-groups]
dev = [
    "grandalf>=0.8",
    "ipykernel>=7.1.0",
    "langgraph-cli[inmem]>=0.4.7",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
